common/k8s/back.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ore-back
  labels:
    app.kubernetes.io/name: ore
    app.kubernetes.io/component: back
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: ore
      app.kubernetes.io/component: back
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ore
        app.kubernetes.io/component: back
    spec:
      containers:
      - name: ore-back
        image: troeger/ore-back:0.8.2
---
apiVersion: v1
kind: Service
metadata:
  name: ore-back
spec:
  ports:
  - port: 8000
    protocol: TCP
  selector:
    app.kubernetes.io/name: ore
    app.kubernetes.io/component: back
