common/k8s/db.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ore-db
  labels:
    app.kubernetes.io/name: ore
    app.kubernetes.io/component: db
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: ore
      app.kubernetes.io/component: db
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ore
        app.kubernetes.io/component: db
    spec:
      containers:
      - name: ore-db
        image: postgres:9
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: ore-db-storage
          mountPath: /var/lib/postgresql 

      volumes:
      - name: ore-db-storage
        persistentVolumeClaim:
          claimName: ore-db-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: ore-db
spec:
  ports:
  - port: 5432
    protocol: TCP
  selector:
    app.kubernetes.io/name: ore
    app.kubernetes.io/component: db
