common/k8s/front.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ore-front
  labels:
    app.kubernetes.io/name: ore
    app.kubernetes.io/component: front
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: ore
      app.kubernetes.io/component: front
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ore
        app.kubernetes.io/component: front
    spec:
      containers:
      - name: ore-front
        image: troeger/ore-front:0.8.3
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ore-front
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app.kubernetes.io/name: ore
    app.kubernetes.io/component: front
