common/k8s/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ore
  labels:
    app.kubernetes.io/name: ore
    app.kubernetes.io/component: front
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - secretName: ore-front-tls
    hosts:
    - live.ore-project.org
  rules:
  - host: live.ore-project.org
    http:
      paths:
      - path:
        backend:
          serviceName: ore-front
          servicePort: 80
